# fztools

./: README.md  dev_test.py  mkdocs.yml  package-lock.json  pyproject.toml
.husky/: pre-commit
devnote/: 01-multi-processing.ipynb  02-dag-model.ipynb  defs.py
docs/: index.md  reference.md  todo.md
note/: 01.ipynb  mermaid.html
src/fztools/: __init__.py  datapack.py  filegather.py  stagemanager.py  validation.py
src/fztools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fztools/filescanner/: filescanner.py
src/fztools/stagemanager/: __init__.py  mx_async.py  mx_igraph.py  mx_mermaid.py  stagemanager.py
tests/: test_stagemanager.py
