[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fztools"
version = "0.1.0"
authors = [
    { name = "Frank Liang" },
]
description = "A collection of tools for file management and stage management"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/fztools"
"Bug Tracker" = "https://github.com/yourusername/fztools/issues"

[tool.setuptools]
package-dir = {"" = "src"} 